Fix leading whitespace

--- a/src/scss/tutorial.scss
+++ b/src/scss/tutorial.scss
@@ -93,6 +93,10 @@ pre {
 }
 
 pre {
+  padding: 0.2rem 1rem;
+}
+
+pre {
   overflow-x: auto;
 }
 
